--- a/studio.html
+++ b/studio.html
@@ -11,7 +11,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
     <header class="page-header">
@@ -31,22 +31,24 @@
         <!-- Контакты -->
         <ul class="list menu-list">
           <li class="contacts-link">
-            <a class="link link-grey" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="link" href="mailto:info@devstudio.com"> <svg class="contacts-icon" width="16" height="12">
+                <use href="./img/icons/sprite.svg#icon-envelope"></use>
+              </svg> info@devstudio.com
+            </a>
           </li>
           <li class="contacts-link">
-            <a class="link link-grey" href="tel:380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="link" href="tel:380961111111"> <svg class="contacts-icon" width="10" height="16">
+                <use href="./img/icons/sprite.svg#icon-smartphone"></use>
+              </svg> +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
     </header>
-
+    
     <main>
       <!--Герой-->
-      <section class="hero">
+      <section class="hero hero-content">
         <div class="container">
           <h1 class="hero-title">
             Эффективные решения <br />
@@ -60,11 +62,11 @@
         <div class="container feature">
           <ul class="list feature-list">
             <li class="box-list">
-              <img
-                class="feature-item"
-                src="./img/antenna 1.svg"
-                alt="Антена"
-              />
+              <div class="feature-item">
+                <svg class="feature-icon" wight="70" height="70">
+                  <use href="./img/icons/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title title-upper">Внимание к деталям</h3>
               <p class="text text-grey">
                 Идейные соображения, а также начало повседневной работы по
@@ -72,7 +74,11 @@
               </p>
             </li>
             <li class="box-list">
-              <img class="feature-item" src="./img/clock 1.svg" alt="Часы" />
+              <div class="feature-item">
+                <svg class="feature-icon" wight="70" height="70">
+                  <use href="./img/icons/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title title-upper">Пунктуальность</h3>
               <p class="text text-grey">
                 Задача организации, в особенности же рамки и место обучения
@@ -80,11 +86,11 @@
               </p>
             </li>
             <li class="box-list">
-              <img
-                class="feature-item"
-                src="./img/diagram 1.svg"
-                alt="Диаграмма на ноутбуке"
-              />
+              <div class="feature-item">
+                <svg class="feature-icon" wight="70" height="70">
+                  <use href="./img/icons/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title title-upper">Планирование</h3>
               <p class="text text-grey">
                 Равным образом консультация с широким активом в значительной
@@ -92,11 +98,11 @@
               </p>
             </li>
             <li class="box-list">
-              <img
-                class="feature-item"
-                src="./img/astronaut 1.svg"
-                alt="Астронавт"
-              />
+              <div class="feature-item">
+                <svg class="feature-icon" wight="70" height="70">
+                  <use href="./img/icons/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title title-upper">Современные технологии</h3>
               <p class="text text-grey">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -106,6 +112,7 @@
           </ul>
         </div>
       </section>
+
     </main>
     
 </body>
