--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
           <a class="logo" href="./index.html"><span>Web</span> Studio</a>
           <ul class="list menu-list">
             <li class="menu-item">
-              <a class="link" href="">Студия</a>
+              <a class="link" href="/index.html">Студия</a>
             </li>
             <li class="menu-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
