--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="logo" href="./index.html"><span>Web</span> Studio</a>
           <ul class="list menu-list">
             <li class="menu-item">
-              <a class="link" href="/index.html">Студия</a>
+              <a class="link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
