--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="logo" href="./index.html"><span>Web</span> Studio</a>
           <ul class="list menu-list">
             <li class="menu-item">
-              <a class="link" href="./index.html">Студия</a>
+              <a class="link current" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
@@ -56,14 +56,13 @@
 
     <main>
       <!--Герой-->
-      <section class="hero hero-content">
-        <div class="container">
+      <section class="hero">
           <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
           <button class="btn-primary" type="button">Заказать услугу</button>
-        </div>
+        
       </section>
       <!-- Особенности -->
       <section class="feature section-padding">
